--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
           <div class="social-links">
              <ul>
-                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                 <li><a href="#"><i class="fa fa-github"></i></a></li>
+                 <li><a href="https://github.com/evistasyonu"><i class="fa fa-github"></i></a></li>
                  <li><a href="mailto:bilgi@evistasyonu.com"><i class="fa fa-envelope"></i></a></li>
              </ul>
           </div>
@@ -211,15 +210,16 @@
            <div class="row">
                 
              <ul class="footer-social-list">
-                <li><a href="#">
-                     <i class="fa fa-twitter"></i><span>Twitter</span>
-                </a></li>
-                <li><a href="#">
-                      <i class="fa fa-github"></i><span>Github</span>
-                </a></li>
-                <li><a href="mailto:bilgi@evistasyonu.com">
-                      <i class="fa fa-envelope"></i><span>Mail</span>
-                </a></li>
+                <li>
+                    <a href="https://github.com/evistasyonu">
+                        <i class="fa fa-github"></i><span>Github</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:bilgi@evistasyonu.com">
+                        <i class="fa fa-envelope"></i><span>Mail</span>
+                    </a>
+                </li>
              </ul>
              
             </div> <!-- /row -->
