--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <div class="social-links">
              <ul>
-                 <li><a href="https://github.com/evistasyonu"><i class="fa fa-github"></i></a></li>
+                 <li><a href="https://github.com/evistasyonu" target="blank"><i class="fa fa-github"></i></a></li>
                  <li><a href="mailto:bilgi@evistasyonu.com"><i class="fa fa-envelope"></i></a></li>
              </ul>
           </div>
@@ -211,7 +211,7 @@
                 
              <ul class="footer-social-list">
                 <li>
-                    <a href="https://github.com/evistasyonu">
+                    <a href="https://github.com/evistasyonu" target="blank">
                         <i class="fa fa-github"></i><span>Github</span>
                     </a>
                 </li>
