--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    ================================================== -->
    <meta charset="utf-8">
    <title>Ev İstasyonu</title>
-   <meta name="description" content="Ev istasyonu, evde sabit ip üzerinden yayın yapan arm64 işlemci mimarisine sahip tek kartlı bilgisayarlar için geliştirilmiş bir işletim sistemi ve yazılımdan oluşmaktadır.">  
+   <meta name="description" content="Ev istasyonu, evde sabit ip üzerinden yayın yapan arm64 işlemci mimarisine sahip tek kartlı bilgisayarlar için geliştirilmiş bir işletim sistemi ve yazılımlarından oluşmaktadır.">  
    <meta name="author" content="Ev İstasyonu">
 
    <!-- mobile specific metas
@@ -81,7 +81,8 @@
                            <p>
                             Ev istasyonu, evde sabit ip üzerinden yayın yapan arm64 
                             işlemci mimarisine sahip tek kartlı bilgisayarlar için 
-                            geliştirilmiş bir işletim sistemi ve yazılımdan oluşmaktadır.
+                            geliştirilmiş bir işletim sistemi ve yazılımlarından 
+                            oluşmaktadır.
                            </p>                              
                        </div>                                                                   
 
