--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
            </div>
 
            <div class="copyright">
-                 <span>© Telif Hakkı [ <a href="https://evistasyonu.com">evistasyonu.com</a>] 24 Ekim 2020 - 20:47:20</span>
+                 <span><a href="https://evistasyonu.com">evistasyonu.com</a> | 24 Ekim 2020 - 20:47:20</span>
            </div>
 
        </div><!-- /footer-bottom -->
